@@ -1,0 +1,13 @@
+<?php
+/**
+ * @package Include/help/en
+ */
+?>
+<h1>Time Threshold</h1>
+
+<p>
+Time Threshold
+</p>
+<p>
+Define el intervalo de tiempo en el cual se garantiza que una alerta no se va a disparar más veces del número establecido en Numero máximo de alertas. Pasado el intervalo definido, una alerta se recupera si llega un valor correcto, salvo que esté activado el valor Recuperación de alerta, en cuyo caso se recupera inmediatamente después de recibir un valor correcto independientemente del umbral.
+</p>
