@@ -1,3 +1,11 @@
+2011-09-05  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* include/help/en/help_action_threshold.php,
+	include/help/es/help_action_threshold.php: added help for threshold from
+	the wiki documentation.
+	
+	Fixes: #3371385
+
 2011-09-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* godmode/setup/setup.php: Added contextual help in this view.
